--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,9 +14,9 @@
 	background-color: rgb(36, 41, 46);
 }
 
-/* .black-theme a,p,h1,h2,h3,h4,h5,h6 {
+.black-theme a,p,h1,h2,h3,h4,h5,h6 {
 	color: white;
-} */
+}
 
 /* ------------棕色------------ */
 .brown-theme {
