--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -139,4 +139,22 @@ img {
 	justify-content: space-between;
 }
 
+/* 阿里图标 */
+@font-face {
+  font-family: 'iconfont';  /* project id 1550259 */
+  src: url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.eot');
+  src: url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1550259_vl8sk3ac3p.svg#iconfont') format('svg');
+}
 
+.iconfont {
+	font-family: "iconfont" !important;
+	font-size: 16px;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke-width: 0.2px;
+	-moz-osx-font-smoothing: grayscale;
+}
