--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -44,9 +44,11 @@ img {
 .ba-col-10 {
 	flex: 1 1 83.33%;
 }
-.ba-col-9{
-	flex:1 1 75%
+
+.ba-col-9 {
+	flex: 1 1 75%
 }
+
 .ba-col-8 {
 	flex: 1 1 66%;
 	border-radius: 3px;
@@ -143,13 +145,14 @@ img {
 
 /* 阿里图标 */
 @font-face {
-  font-family: 'iconfont';  /* project id 1570638 */
-  src: url('//at.alicdn.com/t/font_1570638_3vhex76o75y.eot');
-  src: url('//at.alicdn.com/t/font_1570638_3vhex76o75y.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1570638_3vhex76o75y.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1570638_3vhex76o75y.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1570638_3vhex76o75y.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1570638_3vhex76o75y.svg#iconfont') format('svg');
+	font-family: 'iconfont';
+	/* project id 1570638 */
+	src: url('//at.alicdn.com/t/font_1570638_3vhex76o75y.eot');
+	src: url('//at.alicdn.com/t/font_1570638_3vhex76o75y.eot?#iefix') format('embedded-opentype'),
+		url('//at.alicdn.com/t/font_1570638_3vhex76o75y.woff2') format('woff2'),
+		url('//at.alicdn.com/t/font_1570638_3vhex76o75y.woff') format('woff'),
+		url('//at.alicdn.com/t/font_1570638_3vhex76o75y.ttf') format('truetype'),
+		url('//at.alicdn.com/t/font_1570638_3vhex76o75y.svg#iconfont') format('svg');
 }
 
 .iconfont {
@@ -159,4 +162,20 @@ img {
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.iconf {
+	width: 1.8em;
+	height: 1.8em;
+	vertical-align: -0.15em;
+	fill: currentColor;
+	overflow: hidden;
+}
+
+.iconf-Christmas {
+	width: 35px;
+	height: 35px;
+	vertical-align: -0.15em;
+	fill: currentColor;
+	overflow: hidden;
 }
