--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -179,3 +179,11 @@ img {
 	fill: currentColor;
 	overflow: hidden;
 }
+
+.iconf-medium {
+	width: 20px;
+	height: 20px;
+	vertical-align: -0.15em;
+	fill: currentColor;
+	overflow: hidden;
+}
