--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -187,3 +187,11 @@ img {
 	fill: currentColor;
 	overflow: hidden;
 }
+
+.iconf-Christmas-large {
+	width: 65px;
+	height: 45px;
+	vertical-align: -0.15em;
+	fill: currentColor;
+	overflow: hidden;
+}
